Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,10 +1,1 @@
-{
-  "meta": {
-    "username": "dingboopt",
-    "repositoryName": "dingboopt.github.io",
-    "branch": "master"
-  },
-  "theme": {
-    "name": "Casper"
-  }
-}
+{"meta":{"username":"dingboopt","repositoryName":"dingboopt.github.io","branch":"master"},"site":{"url":"https://dingboopt.github.io"},"socialnetwork":{},"theme":{"name":"","url":"//dingboopt.github.io/themes/"}}
